<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:background="@drawable/sprint">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@color/grey">

        <Button
            android:id="@+id/btStart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bt_height"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:background="@color/white"
            android:text="@string/bt_auto" />

        <Button
            android:id="@+id/btStartManual"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bt_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:background="@color/white"
            android:text="@string/bt_start_m" />

        <Button
            android:id="@+id/btTip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bt_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:text="@string/bt_tip" />
    </LinearLayout>

</LinearLayout>