<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:id="@+id/colorDialogGridLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:useDefaultMargins="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">


    <TextView
        android:id="@+id/alphaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_alpha"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="0"/>

    <SeekBar
        android:layout_column="1"
        android:layout_row="0"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/alphaSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="255"/>

    <TextView
        android:layout_row="1"
        android:layout_gravity="right|center_vertical"
        android:layout_column="0"
        android:id="@+id/redTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_red" />

    <SeekBar
        android:layout_column="1"
        android:layout_row="1"
        android:max="255"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/redSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_column="0"
        android:layout_row="2"
        android:id="@+id/greenTextView"
        android:layout_gravity="right|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_green" />

    <SeekBar
        android:id="@+id/greenSeekBar"
        android:layout_column="1"
        android:layout_row="2"
        android:max="255"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="3"
        android:id="@+id/blueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_blue" />

    <SeekBar
        android:id="@+id/blueSeekBar"
        android:layout_column="1"
        android:layout_row="3"
        android:max="255"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="wrap_content"
        android:id="@+id/colorView"
        android:layout_height="@dimen/color_view_height"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        />

</GridLayout>